# ArcDeskAI

./: .env  .env.example  .gitignore  AI_ORG_ARCHITECTURE.md  DATABASE_DEPLOYMENT_SUCCESS.md  DATABASE_SETUP.md  FILE_INDEX.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  REMOTE_DATABASE_SETUP.md  SECURITY_NOTICE.md  agentdesk  agentdesk_cli.py  agentdesk_core.py  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  setup.sh
agentdesk/: .env.example  .gitignore  Dockerfile  agentdesk  docker-compose.yml  repomix-output.xml  requirements.txt
agentdesk/backend/: .gitignore  alembic.ini  requirements.txt
agentdesk/backend/app/: crud.py  main.py  mcp.py  schemas.py
agentdesk/backend/migrations/: env.py
agentdesk/backend/tests/: test_main.py
agentdesk/configs/organizations/: bizdev_org_config.yaml
agentdesk/frontend/: Dockerfile  next.config.js  package-lock.json  package.json  vite.config.js
agentdesk/frontend/src/: App.jsx  store.js
agentdesk/src/api/: main.py
agentdesk/src/ui/: app.py
configs/organizations/: cybersec_org_config.yaml
scripts/: db_manage.sh  deploy_remote_db.sh
src/api/: dependencies.py  exceptions.py  main.py
src/api/routers/: __init__.py  agent_desks.py  tasks.py  teams.py
src/core/: agent.py
src/database/: __init__.py  base.py  session.py
src/database/crud/: __init__.py  agent_desk.py  base.py  committee.py  metric.py  routing.py  task.py  team.py  workflow.py
src/database/migrations/: env.py
src/database/models/: __init__.py  agent_desk.py  base.py  committee.py  metric.py  notification.py  (+5 more)
(+42 files in other folders)
